--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,4 @@ baseURL = 'https://of-the-stars.net/'
 languageCode = 'en-us'
 title = 'Constellation of Thought'
 theme = 'PaperMod'
+# theme = 'hugo-bearcub'
