--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-bearblog"]
-	path = themes/hugo-bearblog
-	url = https://github.com/janraasch/hugo-bearblog.git
+[submodule "themes/hugo-wassail"]
+	path = themes/hugo-wassail
+	url = git@github.com:of-the-stars/hugo-wassail.git
