--- a/config.toml
+++ b/config.toml
@@ -27,9 +27,12 @@ site = "site"
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-# highlight_code = true
-# highlight_there = "gruvbox-dark"
+highlight_code = true
 # github_alerts = true
+
+[markdown.highlighting]
+style = "inline"
+theme = "catppuccin-mocha"
 
 [extra]
 # Put all your custom variables here
